# xml_dtd

./: CMakeLists.txt  README.md  christophe  christophe.c  christophe.h  dtd  dtd_1  dtd_2  example.xml  gtk_functions.c  gtk_functions.h  linux_dtd  linux_dtd_1  linux_dtd_2  main.c  makefile  structure.c  structure.h  test  test.c  test_1  test_2  validate_read.c  validate_read.h  write  write.c  xml  xml_1
DTD_test/: README.md  not_valid_11.dtd  not_valid_13.dtd  not_valid_6.dtd  test_xml_dtd.c  test_xml_dtd_part_1.c  test_xml_dtd_part_2.c  valid_1.dtd  valid_10.dtd  valid_11.dtd  valid_12.dtd  valid_13.dtd  valid_2.dtd  valid_3.dtd  valid_4.dtd  valid_5.dtd  valid_6.dtd  valid_7.dtd
gui_files/: gui.glade  gui.glade~  toto  tototeztzetzetzetzeteztzetzetze  valid_1.xml
xml_test/: README.md  not_valid_1.xml  not_valid_10.xml  not_valid_3.xml  not_valid_4.xml  not_valid_5.xml  not_valid_6.xml  not_valid_7.xml  not_valid_8.xml  not_valid_9.xml  test_xml.c  test_xml.h  test_xml_part_1.c  test_xml_part_2.c  valid_1.xml  valid_10.xml  valid_11.xml  valid_12.xml  valid_13.xml  valid_2.xml  valid_3.xml  valid_4.xml  valid_5.xml  valid_6.xml  valid_7.xml  valid_8.xml  valid_9.xml
